--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
     "paths": {
       "~/*": ["./src/*"],
       "@serverTypes/*": ["../server/src/Types/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     ".eslintrc.cjs",
@@ -29,7 +34,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
-    "**/*.js"
+    "**/*.js",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
