--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "svgr": "npx @svgr/cli --out-dir src/assets/icons --ignore-existing --typescript --no-prettier --replace-attr-values '#FBF7F7=currentColor' --replace-attr-values '1em=24' --icon -- svgs && next lint -- --fix"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.0.6",
+    "aws-amplify": "^6.0.8",
     "class-variance-authority": "^0.7.0",
     "next": "14.0.3",
     "react": "^18",
